# isleep

./: .gitignore  Jenkinsfile  LICENSE  README.md  pyproject.toml
src/isleep/: __init__.py  __main__.py  core.py
tests/: test_isleep.py  test_isleep_cli.py  test_syspath.py
